[tool.poetry]
name = "epubconv-python"
version = "3.0.0"
description = "Use python convert epub file from Simplified Chinese to Traditional Chinese on windows"
authors = ["ThanatosDi <yykkold55tw@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "epubconv_python"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
cssutils = "^2.6.0"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
bs4 = "^0.0.1"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
